--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "next": "^14.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "22.5.1",
+    "@types/react": "18.3.5",
+    "typescript": "5.5.4"
   }
 }
